--- a/2025_WpfApp2/MainWindow.xaml
+++ b/2025_WpfApp2/MainWindow.xaml
@@ -5,8 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_2025_WpfApp2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="624" Width="838">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="381"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="641*"/>
+            <ColumnDefinition Width="197*"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Background="#FFF5DBDB"/>
+        <Button Grid.Column="1" Content="Button" Margin="35,104,37,0" VerticalAlignment="Top" Height="72"/>
+        <TextBox Margin="10,10,10,10" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" Background="#FFEBEFDE" Grid.ColumnSpan="2"/>
 
     </Grid>
 </Window>
