調整視窗屬性並新增飲料選項與訂購功能
修改了 MainWindow.xaml 的視窗高度，新增 Grid 的欄列定義與飲料選項顯示，包括名稱、價格與數量輸入功能。新增訂購按鈕與訂購資訊顯示區域。在 MainWindow.xaml.cs 中新增了數量輸入驗證與點餐資訊顯示的事件處理方法。

--- a/2025_WpfApp2/MainWindow.xaml
+++ b/2025_WpfApp2/MainWindow.xaml
@@ -5,8 +5,49 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_2025_WpfApp2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="549" Width="800">
     <Grid>
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="530" MinWidth="530"/>
+            <ColumnDefinition MinWidth="100"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="243"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <StackPanel Margin="2,2,2,2">
+            <StackPanel Height="34" Background="#FFF3EBEB" Margin="5,5,5,0" Orientation="Horizontal">
+                <Label Content="紅茶大杯" FontSize="14" FontWeight="Bold" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,2,0,2" Height="30"/>
+                <Label Content="60元" FontSize="14" FontWeight="Bold" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,2,0,2" Height="30" Foreground="#FFEF2D2D"/>
+                <TextBox TextWrapping="Wrap" Width="120" Margin="50,0,0,0" VerticalAlignment="Center" Height="30" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="14" TextChanged="TextBox_TextChanged"/>
+            </StackPanel>
+            <StackPanel Height="34" Background="#FFF3EBEB" Margin="5,5,5,0" Orientation="Horizontal">
+                <Label Content="紅茶小杯" FontSize="14" FontWeight="Bold" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,2,0,2" Height="30"/>
+                <Label Content="40元" FontSize="14" FontWeight="Bold" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,2,0,2" Height="30" Foreground="#FFEF2D2D"/>
+                <TextBox TextWrapping="Wrap" Width="120" Margin="50,0,0,0" VerticalAlignment="Center" Height="30" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="14" TextChanged="TextBox_TextChanged"/>
+            </StackPanel>
+            <StackPanel Height="34" Background="#FFF3EBEB" Margin="5,5,5,0" Orientation="Horizontal">
+                <Label Content="綠茶大杯" FontSize="14" FontWeight="Bold" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,2,0,2" Height="30"/>
+                <Label Content="60元" FontSize="14" FontWeight="Bold" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,2,0,2" Height="30" Foreground="#FFEF2D2D"/>
+                <TextBox TextWrapping="Wrap" Width="120" Margin="50,0,0,0" VerticalAlignment="Center" Height="30" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="14" TextChanged="TextBox_TextChanged"/>
+            </StackPanel>
+            <StackPanel Height="34" Background="#FFF3EBEB" Margin="5,5,5,0" Orientation="Horizontal">
+                <Label Content="綠茶小杯" FontSize="14" FontWeight="Bold" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,2,0,2" Height="30"/>
+                <Label Content="40元" FontSize="14" FontWeight="Bold" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,2,0,2" Height="30" Foreground="#FFEF2D2D"/>
+                <TextBox TextWrapping="Wrap" Width="120" Margin="50,0,0,0" VerticalAlignment="Center" Height="30" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="14" TextChanged="TextBox_TextChanged"/>
+            </StackPanel>
+            <StackPanel Height="34" Background="#FFF3EBEB" Margin="5,5,5,0" Orientation="Horizontal">
+                <Label Content="可樂大杯" FontSize="14" FontWeight="Bold" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,2,0,2" Height="30"/>
+                <Label Content="40元" FontSize="14" FontWeight="Bold" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,2,0,2" Height="30" Foreground="#FFEF2D2D"/>
+                <TextBox TextWrapping="Wrap" Width="120" Margin="50,0,0,0" VerticalAlignment="Center" Height="30" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="14" TextChanged="TextBox_TextChanged"/>
+            </StackPanel>
+            <StackPanel Height="34" Background="#FFF3EBEB" Margin="5,5,5,0" Orientation="Horizontal">
+                <Label Content="可樂小杯" FontSize="14" FontWeight="Bold" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,2,0,2" Height="30"/>
+                <Label Content="20元" FontSize="14" FontWeight="Bold" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,2,0,2" Height="30" Foreground="#FFEF2D2D"/>
+                <TextBox TextWrapping="Wrap" Width="120" Margin="50,0,0,0" VerticalAlignment="Center" Height="30" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="14" TextChanged="TextBox_TextChanged"/>
+            </StackPanel>
+        </StackPanel>
+        <Button x:Name="OrderButton" Grid.Column="1" Content="訂購" Margin="85,101,85,101" FontSize="16" Click="OrderButton_Click"/>
+        <TextBlock Margin="10,10,10,10" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" FontSize="16" Background="#FFF3F5E3" Grid.ColumnSpan="2"/>
     </Grid>
 </Window>
